# mattsson-weibull-extension

./: .gitignore  CITATION  README.md  pyproject.toml
documents/: paper.aux  paper.fdb_latexmk  paper.fls  paper.tex  references.bib  task_documents.py
src/flexible_moral_hazard/: _version.py  model.py  params.py
src/flexible_moral_hazard/final/: task_solve_model.py
src/mattsson-weibull-extension/: config.py  io.py  params.py  solve.py
src/mattsson-weibull-extension/final/: task_solve_model.py
