# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "mattsson-weibull-extension"
description = "Template for reproducible research projects in economics"
requires-python = "==3.14"
dynamic = [ "version" ]
keywords = [
  "Reproducible Research",
  "Economics",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
authors = [
  { name = "Orcan Ok", email = "orcanok96@gmail.com" },
]
maintainers = [
  { name = "Orcan Ok", email = "orcanok96@gmail.com" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Changelog = "https://github.com/iame-uni-bonn/final-project-orcanok"
Documentation = "https://github.com/iame-uni-bonn/final-project-orcanok"
Github = "https://github.com/iame-uni-bonn/final-project-orcanok"
Tracker = "https://github.com/iame-uni-bonn/final-project-orcanok/issues"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = [ "hatchling", "hatch_vcs" ]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/mattsson-weibull-extension/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [ "tests" ]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = [ "src" ]
sources = [ "src" ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pixi configuration
# ======================================================================================

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.pixi.dependencies]
jupyter-book = ">=2.0"
jupyterlab = "*"
nodejs = "*"
numpy = ">=2.4"
pandas = ">=2.2"
plotly = ">=6.5"
prek = ">=0.3.5,<0.4"
pygraphviz = "*"
pytask = "*"
pytask-parallel = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
python-kaleido = ">=1.1"
scipy = "*"
statsmodels = "*"
ty = "*"
matplotlib = ">=3.10.8,<4"
optimagic = "*"

[tool.pixi.pypi-dependencies]
mattsson-weibull-extension = { path = ".", editable = true }
pdbp = "*"
tabulate = "*"

[tool.pixi.tasks]
ty = { cmd = "ty check", description = "Check typing" }
view-paper = { cmd = "jupyter book start", description = "View the HTML paper in browser" }
view-pres = { cmd = "npx slidev documents/presentation.md", description = "View the presentation in browser" }
[tool.pixi.feature.docs.dependencies]
jupyter-book = ">=2.0"
mystmd = "*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "jupyter book build --html", cwd = "docs_template/source" }
view-docs = { cmd = "jupyter book start", cwd = "docs_template/source" }
check-urls = { cmd = "jupyter book build --html --check-links --strict", cwd = "docs_template/source" }
recreate-dag = { cmd = "pixi run pytask dag --rank-direction TB --output-path docs_template/source/figures/dag.svg" }

[tool.pixi.environments]
docs = { features = [ "docs" ], solve-group = "default" }

# ======================================================================================
# Pytask configuration
# ======================================================================================

[tool.pytask.ini_options]
paths = [ "./src/mattsson-weibull-extension", "./documents" ]
pdbcls = "pdbp:Pdb"

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py314"
fix = true
extend-exclude = [ "old_code" ]
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "ANN",     # Missing type annotations
  "COM812",  # Conflict with ruff-format
  "D10",     # Missing docstrings
  "ISC001",  # Conflict with ruff-format
  "PLR0913", # Too many arguments in function definition
  "RET504",  # Don't force to calculate upon return
  "S101",    # Use of `assert` detected.
  "S301",    # pickle module is unsafe
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "D", "PD011" ]
"task_*.py" = [ "ANN", "ARG001", "S603" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ======================================================================================
# ty configuration
# ======================================================================================

[tool.ty.environment]
root = [ "." ]

[tool.ty.src]
include = [ "src/", "tests/" ]

[tool.ty.rules]
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
invalid-argument-type = "error"
invalid-ignore-comment = "error"
invalid-return-type = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"

# ======================================================================================
# Miscellaneous tools configuration
# ======================================================================================

[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = [  ]
markers = [
  "wip: Tests that are work-in-progress.",
  "unit: Flag for unit tests which target mainly a single function.",
  "integration: Flag for integration tests which may comprise of multiple unit tests.",
  "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [ "docs" ]

[tool.codespell]
ignore-words = ".codespell-ignore-words"
skip = "package-lock.json,node_modules,pixi.lock,.codespell-ignore-words"

[tool.yamlfix]
line_length = 88
none_representation = "null"
preserve_quotes = true
